Cambios para GraalVM